--- a/Notebook/breast_cancer_detection.ipynb
+++ b/Notebook/breast_cancer_detection.ipynb
@@ -30,35 +30,26 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dfc5e925-3e92-45d0-b152-538962e5b6b4"
+        "outputId": "96307d48-f72f-4633-808c-4a8e9ee19018"
       },
       "source": [
         "!pip install mpld3"
       ],
-      "execution_count": 1,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Collecting mpld3\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/7d/b4/f380b6d58658106870161d703972b74fc2e66317acf298f873c0816d1fb2/mpld3-0.5.2.tar.gz (888kB)\n",
-            "\r\u001b[K     |▍                               | 10kB 14.4MB/s eta 0:00:01\r\u001b[K     |▊                               | 20kB 20.1MB/s eta 0:00:01\r\u001b[K     |█                               | 30kB 12.3MB/s eta 0:00:01\r\u001b[K     |█▌                              | 40kB 10.7MB/s eta 0:00:01\r\u001b[K     |█▉                              | 51kB 4.8MB/s eta 0:00:01\r\u001b[K     |██▏                             | 61kB 5.6MB/s eta 0:00:01\r\u001b[K     |██▋                             | 71kB 6.3MB/s eta 0:00:01\r\u001b[K     |███                             | 81kB 6.3MB/s eta 0:00:01\r\u001b[K     |███▎                            | 92kB 6.6MB/s eta 0:00:01\r\u001b[K     |███▊                            | 102kB 6.8MB/s eta 0:00:01\r\u001b[K     |████                            | 112kB 6.8MB/s eta 0:00:01\r\u001b[K     |████▍                           | 122kB 6.8MB/s eta 0:00:01\r\u001b[K     |████▉                           | 133kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████▏                          | 143kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████▌                          | 153kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████                          | 163kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████▎                         | 174kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████▋                         | 184kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████                         | 194kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████▍                        | 204kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████▊                        | 215kB 6.8MB/s eta 0:00:01\r\u001b[K     |████████▏                       | 225kB 6.8MB/s eta 0:00:01\r\u001b[K     |████████▌                       | 235kB 6.8MB/s eta 0:00:01\r\u001b[K     |████████▉                       | 245kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████████▏                      | 256kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████████▋                      | 266kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████████                      | 276kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████████▎                     | 286kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████████▊                     | 296kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████████                     | 307kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████████▍                    | 317kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████████▉                    | 327kB 6.8MB/s eta 0:00:01\r\u001b[K     |████████████▏                   | 337kB 6.8MB/s eta 0:00:01\r\u001b[K     |████████████▌                   | 348kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 358kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████████████▎                  | 368kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████████████▋                  | 378kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████████████                  | 389kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████████████▍                 | 399kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████████████▊                 | 409kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████████████▏                | 419kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████████████▌                | 430kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████████████▉                | 440kB 6.8MB/s eta 0:00:01\r\u001b[K     |████████████████▎               | 450kB 6.8MB/s eta 0:00:01\r\u001b[K     |████████████████▋               | 460kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████████████████               | 471kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████████████████▎              | 481kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████████████████▊              | 491kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████████████████              | 501kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████████████████▍             | 512kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████████████████▉             | 522kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████████████████▏            | 532kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████████████████▌            | 542kB 6.8MB/s eta 0:00:01\r\u001b[K     |████████████████████            | 552kB 6.8MB/s eta 0:00:01\r\u001b[K     |████████████████████▎           | 563kB 6.8MB/s eta 0:00:01\r\u001b[K     |████████████████████▋           | 573kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████           | 583kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████▍          | 593kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████▊          | 604kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████▏         | 614kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████▌         | 624kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████▉         | 634kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████▎        | 645kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████▋        | 655kB 6.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████        | 665kB 6.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████▍       | 675kB 6.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████▊       | 686kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████████       | 696kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▍      | 706kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▉      | 716kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▏     | 727kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▌     | 737kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████     | 747kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▎    | 757kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▋    | 768kB 6.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 778kB 6.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▍   | 788kB 6.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▊   | 798kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▏  | 808kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▌  | 819kB 6.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▉  | 829kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▎ | 839kB 6.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▋ | 849kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████ | 860kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▍| 870kB 6.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▊| 880kB 6.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 890kB 6.8MB/s \n",
-            "\u001b[?25hRequirement already satisfied: jinja2 in /usr/local/lib/python3.6/dist-packages (from mpld3) (2.11.2)\n",
+            "Requirement already satisfied: mpld3 in /usr/local/lib/python3.6/dist-packages (0.5.2)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.6/dist-packages (from mpld3) (3.2.2)\n",
-            "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.6/dist-packages (from jinja2->mpld3) (1.1.1)\n",
+            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.6/dist-packages (from mpld3) (2.11.2)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->mpld3) (1.3.1)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->mpld3) (2.4.7)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->mpld3) (2.8.1)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib->mpld3) (0.10.0)\n",
             "Requirement already satisfied: numpy>=1.11 in /usr/local/lib/python3.6/dist-packages (from matplotlib->mpld3) (1.18.5)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.1->matplotlib->mpld3) (1.15.0)\n",
-            "Building wheels for collected packages: mpld3\n",
-            "  Building wheel for mpld3 (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for mpld3: filename=mpld3-0.5.2-cp36-none-any.whl size=200617 sha256=444f177edc4f6232543ee35acae34cf1b7fd3b4d09a4c16e30b0906689078ec7\n",
-            "  Stored in directory: /root/.cache/pip/wheels/21/73/06/ea4b85609301850b1289a282852d92e22fcbf7a250ed5f547f\n",
-            "Successfully built mpld3\n",
-            "Installing collected packages: mpld3\n",
-            "Successfully installed mpld3-0.5.2\n"
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->mpld3) (2.8.1)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->mpld3) (2.4.7)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib->mpld3) (0.10.0)\n",
+            "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.6/dist-packages (from jinja2->mpld3) (1.1.1)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.1->matplotlib->mpld3) (1.15.0)\n"
           ],
           "name": "stdout"
         }
@@ -89,7 +80,7 @@
         "from sklearn.tree import DecisionTreeClassifier, export_graphviz\r\n",
         "from sklearn import metrics"
       ],
-      "execution_count": 2,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -100,13 +91,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 232
         },
-        "outputId": "076f03b4-6c95-4c22-a0ea-9352c4302622"
+        "outputId": "af0a3db3-ccea-4889-b00b-d25136db21d9"
       },
       "source": [
         "df = pd.read_csv(\"data.csv\",header = 0)\n",
         "df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -364,7 +355,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 26
         }
       ]
     },
@@ -375,7 +366,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mPatiUrpB9uh",
-        "outputId": "6f04b388-de84-4472-f80a-86b2811100ec"
+        "outputId": "cba91626-c355-48e2-d3d6-db861da85d30"
       },
       "source": [
         "df.drop('id',axis=1,inplace=True)\n",
@@ -383,7 +374,7 @@
         "# size of the dataframe\n",
         "len(df)"
       ],
-      "execution_count": 4,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -395,7 +386,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 27
         }
       ]
     },
@@ -406,12 +397,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C7PwaHmCCAtw",
-        "outputId": "d6819ef2-145f-4e5c-95d9-eea523f99c94"
+        "outputId": "e4e2aef3-848c-4a1a-bc72-87a8e7fc8116"
       },
       "source": [
         "df.diagnosis.unique()"
       ],
-      "execution_count": 5,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -423,7 +414,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 28
         }
       ]
     },
@@ -435,13 +426,13 @@
           "height": 232
         },
         "id": "r-pRy9RyCDK8",
-        "outputId": "3f273a62-f134-4447-9329-9af8c6524b10"
+        "outputId": "beb1f2a2-8d35-4d31-a970-332bba6af7a2"
       },
       "source": [
         "df['diagnosis'] = df['diagnosis'].map({'M':1,'B':0})\n",
         "df.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -687,7 +678,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 29
         }
       ]
     },
@@ -699,12 +690,12 @@
           "height": 321
         },
         "id": "foWMvukLCJh0",
-        "outputId": "2c67ed33-5621-423d-80eb-7aa452e751c7"
+        "outputId": "81ab61e2-9a79-4411-cf3b-a9aba4045de6"
       },
       "source": [
         "df.describe()"
       ],
-      "execution_count": 7,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1055,7 +1046,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 30
         }
       ]
     },
@@ -1067,7 +1058,7 @@
           "height": 281
         },
         "id": "AIoSSuu5CVvQ",
-        "outputId": "08a2aaed-ac5e-4edb-f1c2-514514564632"
+        "outputId": "41ddb778-9ba4-4838-9e97-b36a5d5ccd44"
       },
       "source": [
         "df.describe()\n",
@@ -1075,7 +1066,7 @@
         "plt.title('Diagnosis (M=1 , B=0)')\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1103,7 +1094,7 @@
         "dfM=df[df['diagnosis'] == 1]\n",
         "dfB=df[df['diagnosis'] == 0]"
       ],
-      "execution_count": 9,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -1114,7 +1105,7 @@
           "height": 734
         },
         "id": "3GWrEjfnCfBc",
-        "outputId": "c4dd2546-117a-469d-ff80-d529d5b6028e"
+        "outputId": "8367fb98-9c24-47ca-df52-282a91cadb8f"
       },
       "source": [
         "#Stack the data\n",
@@ -1130,7 +1121,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1155,7 +1146,7 @@
       "source": [
         "traindf, testdf = train_test_split(df, test_size = 0.3)"
       ],
-      "execution_count": 11,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1174,11 +1165,9 @@
       },
       "source": [
         "#Generic function for making a classification model and accessing the performance. \n",
-        "# From AnalyticsVidhya tutorial\n",
         "def classification_model(model, data, predictors, outcome):\n",
         "  #Fit the model:\n",
         "  model.fit(data[predictors],data[outcome])\n",
-        "  \n",
         "  #Make predictions on training set:\n",
         "  predictions = model.predict(data[predictors])\n",
         "  \n",
@@ -1189,7 +1178,8 @@
         "  #Perform k-fold cross-validation with 5 folds\n",
         "  kf = KFold(n_splits=5)\n",
         "  error = []\n",
-        "  for train, test in kf.split(data):\n",
+        "  for train, test in kf.split(data[predictors]):\n",
+        "    \n",
         "    # Filter training data\n",
         "    train_predictors = (data[predictors].iloc[train,:])\n",
         "    \n",
@@ -1207,7 +1197,7 @@
         "  #Fit the model again so that it can be refered outside the function:\n",
         "  model.fit(data[predictors],data[outcome]) "
       ],
-      "execution_count": 12,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -1217,7 +1207,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dCfmfN03Dc0n",
-        "outputId": "d913c2a0-7979-43aa-b0b3-57485e68e08d"
+        "outputId": "87cf342a-f480-4b7c-85f5-f3089fbd0867"
       },
       "source": [
         "# Use all the features of the nucleus\n",
@@ -1226,17 +1216,17 @@
         "model = RandomForestClassifier(n_estimators=100,min_samples_split=25, max_depth=7, max_features=2)\n",
         "classification_model(model, traindf, predictor_var, outcome_var)"
       ],
-      "execution_count": 13,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Accuracy : 95.980%\n",
-            "Cross-Validation Score : 93.750%\n",
+            "Accuracy : 94.975%\n",
+            "Cross-Validation Score : 92.500%\n",
             "Cross-Validation Score : 91.875%\n",
-            "Cross-Validation Score : 92.917%\n",
-            "Cross-Validation Score : 92.472%\n",
-            "Cross-Validation Score : 92.712%\n"
+            "Cross-Validation Score : 92.500%\n",
+            "Cross-Validation Score : 92.160%\n",
+            "Cross-Validation Score : 92.462%\n"
           ],
           "name": "stdout"
         }
@@ -1254,7 +1244,7 @@
         "# load the model from disk\r\n",
         "loaded_model = pickle.load(open(filename, 'rb'))"
       ],
-      "execution_count": 19,
+      "execution_count": 40,
       "outputs": []
     },
     {
